Updated color schemes of nav bar and background, also fixed spacing

--- a/src/resources/css/style.css
+++ b/src/resources/css/style.css
@@ -1,7 +1,12 @@
 main {
   min-height: 100vh;
   min-width: 100vw;
-  background-image: url(../img/background.png);
+  background-color: #f2f2f2;
+}
+
+.menu{
+  padding-bottom: 20pt; 
+  background-color: #f2f2f2;
 }
 
 .center {
@@ -48,8 +53,17 @@ main {
   margin-top: 50px;
 }
 
-.navTitle{
-  text-shadow: -1px 1px 2px #fffdfd, 1px 1px 1px #fbf8f8, 1px -1px 0 #ffffff, -1px -1px 0 #fcfcfc; 
+/* Navigation Bar */
+
+.navBar{
+  background-color: #dadada; 
+  border-bottom: 2px solid #d3d3d3;
+  padding: 10px 0;
+}
+
+.navButton{
+  background-color: #add8e6;
+  padding: 18pt;
 }
 
 .parent {
